@@ -1,3 +1,8 @@
+2015-10-09 huku <huku@grhack.net>
+
+    * Use sets instead of lists in "sex_loader.py".
+
+
 2015-09-19 huku <huku@grhack.net>
 
     * Fixed bug in `dump_pe_coff_exit_points()' and modified it to print thunk
